# Live-Fifa-World-Cup-Sentiment-Analysis

./: .gitignore  README.md  analysis.ipynb  app.py  pyproject.toml  search_results.py
model/: model.py.py  sentiment_model.pkl  vectorizer.pkl
