[project]
name = "live-fifa-world-cup-sentiment-analysis"
version = "0.1.0"
description = "FIFA World Cup tweet sentiment analysis environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.0",
    "nltk>=3.9.1",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.59.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
]

[tool.uv]
package = false
